k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coin-ops
  labels:
    app.kubernetes.io/part-of: coin-ops
