k8s/history-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-consumer
  namespace: coin-ops
  labels:
    app.kubernetes.io/name: history-consumer
    app.kubernetes.io/part-of: coin-ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: history-consumer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: history-consumer
        app.kubernetes.io/part-of: coin-ops
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: history-consumer
          image: ghcr.io/ua-academy-projects/coin-ops-history-consumer:shabat-latest
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
